# GiSTProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  part.cpp  part.h
BTree/: gist_btree.cpp
GiST/: gist_cursor.cpp  gist_defs.h
core_GiST/: gist_p.cpp  gist_p.h
extension_implementation/: btree_ext.cpp
extension_implementation/core_BTree/: gist_btree.cpp  gist_btree.h
functions/: DBfiles_utils.cpp  DiskIO.cpp  commMan.cpp  general_utils.cpp  interface.cpp  nfaQueryParser.cpp  part_class.cpp  socket_interface.cpp  tcpInterfaceQT.cpp
functions/DB_CRUD/: create.cpp  read.cpp
headers/: commMan.hpp  configs.hpp  general_utils.h  general_utils.hpp  include_handler.hpp  includes.hpp  interface.hpp  macros.hpp  nfaQueryParser.hpp  part_class.hpp  socket_interface.hpp  tcpInterfaceQT.hpp  types.hpp
tests/: insertTest.cpp
